[workspace]
members = [
    "application/easy-fs-fuse",
    "application/user",
    "async_tiny/async_mutex",
    "async_tiny/async_virtio_driver",
    "async_tiny/async_easy_fs",
    "utils/ge",
    "ring_scheduler",
    "easy-fs", 
    "syscall",
    "kernel", 
    "memory",
    "safe_cell",
    "event",
    "tconfig",
    ]
default-members = ["kernel"]

exclude = [
    "mkConfig",
    "script",
    "other_libs/*",
    ]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
riscv = { git = "https://github.com/Andre-HJR/riscv.git", rev = "031d548a" }