[workspace]
members = [
    "application/easy-fs-fuse",
    "application/user",
    "async_tiny/async_mutex",
    "async_tiny/async_virtio_driver",
    "async_tiny/async_easy_fs",
    "kernel/module/ring_scheduler",
    "easy-fs",
    "kernel/module/syscall",
    "kernel",
    "kernel/module/memory",
    "kernel/module/safe_cell",
    "kernel/module/event",
    "kernel/module/tconfig",
    "xtask",
    ]
default-members = ["xtask"]

exclude = [
    "mkConfig",
    "script",
    "other_libs/*",
    ]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true


[patch.crates-io]
riscv = { git = "https://github.com/Andre-HJR/riscv.git", rev = "031d548a" }
