[workspace]
members = [
    "application/easy-fs-fuse",
    "application/user",
    "kernel",
    "kernel/module/asynchronous/async_mutex",
    "kernel/module/asynchronous/async_virtio_driver",
    "kernel/module/asynchronous/async_easy_fs",
    "kernel/module/ring_scheduler",
    "kernel/module/easy-fs",
    "kernel/module/syscall",
    "kernel/module/memory",
    "kernel/module/safe_cell",
    "kernel/module/event",
    "kernel/module/tconfig",
    "xtask",
    ]
default-members = ["xtask"]

exclude = [
    "mkConfig",
    "script",
    "other_libs/*",
    ]


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true


[patch.crates-io]
# riscv = { git = "https://github.com/Andre-HJR/riscv.git", rev = "031d548a" }
riscv = { path = "other_libs/riscv" }
# virtio-drivers = { git = "https://github.com/Andre-HJR/virtio-drivers.git", rev = "4ee80e5" }
virtio-drivers = { path = "other_libs/virtio-drivers" }
