[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "1.2.1"
mm = { path = "../memory", package = "memory" }
drivers = { path = "../drivers", package = "drivers" }
safe_cell = { path = "../safe_cell", package = "safe_cell" }
easy-fs = { path = "../easy-fs", package = "easy-fs" }
task = { path = "../task", package = "task" }
