[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
volatile = "0.3"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../application/easy-fs" }
embedded-graphics = "0.7.1"
tinybmp = "0.3.1"
woke = "0.0.2"
config = { path = "../tconfig", package = "tconfig" }
# sbi = { path = "../sbi", package = "sbi" }
mm = { path = "../memory", package = "memory" }
safe_cell = { path = "../safe_cell", package = "safe_cell" }
# sync = { path = "../sync", package = "sync" }
# task = { path = "../task", package = "task" }

[dependencies.riscv]
git = "https://github.com/Andre-HJR/riscv.git"
rev = "031d548a"


# [dependencies.sbi-rt]
# version = "^0.0.2"
# features = ["legacy"]

[dependencies.linker]
path = "../other_libs/linker"


[build-dependencies.linker]
path = "../other_libs/linker"

[lib]
bench = false
# staticlib is required to build a self-contained, fully-linked .a file
# that we can jump to from the bootloader
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
