[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
volatile = "0.3"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../easy-fs" }
embedded-graphics = "0.7.1"
tinybmp = "0.3.1"
config = { path = "../tconfig", package = "tconfig" }
mm = { path = "../memory", package = "memory" }
safe_cell = { path = "../safe_cell", package = "safe_cell" }
syscall_macro = { path = "../syscall", package = "syscall" }
ge = { path = "../utils/ge", package = "ge" }

[dependencies.riscv]
git = "https://github.com/Andre-HJR/riscv.git"
rev = "031d548a"
[dependencies.log]
version = "0.4"
features = []

[build-dependencies.linker]
path = "../other_libs/linker"

[lib]
bench = false
# staticlib is required to build a self-contained, fully-linked .a file
# that we can jump to from the bootloader
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
