[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.10.1"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
bit_field = "0.10"
spin = "0.7.0"
woke = "0.0.2"
xmas-elf = "0.7.0"
volatile = "0.3"
virtio-drivers = "0.1.0"
embedded-graphics = "0.7.1"
tinybmp = "0.3.1"
simple_endian = { git = "https://github.com/michalfita/simple-endian-rs", branch = "bugfix/4/fix-no_std-support-right-way", default_features = false, features = [
    "bitwise",
    "comparisons",
    "format",
    "math_ops",
    "neg_ops",
    "shift_ops",
    "both_endian",
    "float_impls",
    "integer_impls",
    "byte_impls",
] }
easy-fs = { path = "module/easy-fs" }
config = { path = "module/tconfig", package = "tconfig" }
mm = { path = "module/memory", package = "memory" }
safe_cell = { path = "module/safe_cell", package = "safe_cell" }
syscall_macro = { path = "module/syscall", package = "syscall" }

[dependencies.log]
version = "0.4"
features = []

[features]
default = ["async_tiny", "async_test_woke"]
async_tiny = []
async_test = []
async_test_woke = []

[lib]
bench = false
# staticlib is required to build a self-contained, fully-linked .a file
# that we can jump to from the bootloader
crate-type = ["staticlib"]

# [profile.dev]
# panic = "abort"
#
# [profile.release]
# panic = "abort"
