[package]
name = "kernel_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sbi-rt]
version = "^0.0.2"
features = ["legacy"]

[dependencies.linker]
path = "../linker"


[build-dependencies.linker]
path = "../linker"

[lib]
bench = false
# staticlib is required to build a self-contained, fully-linked .a file
# that we can jump to from the bootloader
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"