[package]
name = "ring_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7"
riscv = "0.10.1"
lazy_static = { version = "1", features = ["spin_no_std"] }
r0 = "1.0"
buddy_system_allocator = "0.6"
syscall = { path = "../syscall", package = "syscall"}