[package]
name = "sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/Andre-HJR/riscv.git", rev = "031d548a"}
safe_cell = { path = "../safe_cell", package = "safe_cell" }
task = { path = "../task", package = "task" }
