[package]
name = "syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs = { path = "../fs", package = "fs" }
mm = { path = "../memory", package = "memory" }
task = { path = "../task", package = "task" }
sync = { path = "../sync", package = "sync" }
drivers = { path = "../drivers", package = "drivers" }
timer = { path = "../timer", package = "timer" }
