[package]
name = "task_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = "1.2.1"
config = { path = "../tconfig", package = "tconfig" }
mm = { path = "../memory", package = "memory" }
safe_cell = { path = "../safe_cell", package = "safe_cell" }