[package]
name = "timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../tconfig", package = "tconfig" }
sbi = {path = "../sbi", package = "sbi" }
safe_cell = { path = "../safe_cell", package = "safe_cell" }
task = { path = "../task", package = "task" }