[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.clap]
version = "4.0"
features = ["derive"]

[dependencies.ctrlc]
version = "3.1"
features = ["termination"]
# [dependencies.serde]
# version = "1.0"
# 
# [dependencies.serde_derive]
# version = "1.0"
# 
# [dependencies.toml]
# version = "0.5.9"