[package]
name = "user_lib"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
embedded-graphics = "0.7.1"
oorandom ="11"
virtio-input-decoder = "0.1.4"
woke = "0.0.2"
spin = "0.5.2"
r0 = "1"
syscall_macro = { path = "../../syscall", package = "syscall" }
event = { path = "../../event", package = "event" }
async-mutex = { path = "../../async_tiny/async_mutex", package = "async_mutex"}

[profile.release]
debug = true

[features]
async_lib = []