[package]
name = "async_easy_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
spin = "0.7"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
bit_field = "0.10"
bitflags = "1.2"
async-mutex = { path = "../async_mutex", package = "async_mutex" }