[package]
name = "async_virtio_driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7"
nb = "1.0.0"
volatile = "0.2"
bitflags = "1.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
event = { path = "../../kernel/module/event", package="event" }
safe_cell = { path = "../../kernel/module/safe_cell", package="safe_cell" }
