[package]
name = "path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.7.0"
riscv = "0.10.1"
memory = { path = "../memory" }
fs_node = { path = "../fs_node" }
lazy_static = { features = ["spin_no_std"], version = "1.0" }

[lib]
crate-type = ["rlib"]
